Stop-gap form-builder solution using Monaco and prism, rather than a visual designer

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,9 @@
+@import '~prismjs/themes/prism.css';
+
 body {
   margin: 0;
+}
+
+.mat-dialog-container {
+  background: #1e1e1e;
 }
